# cvl

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  project1.c
cvl/: cvl.c  cvl.h
data/original/: circle.pgm  circles.pgm  halo.ppm  lanes.ppm
docs/: hough_transform.md
examples/: blur.c  canny.c  ccl.c  color.c  cs136.c  demo.c  hough_circles.c  hough_lines.c  laplacian.c  sobel.c  threshold.c
include/: cvl.h  cvl_core.h  cvl_imgproc.h  cvl_io.h  netpbm.h
include/cvl/: core.h  cvl.h  cvl_core.h  cvl_draw.h  cvl_error.h  cvl_hough.h  cvl_imgproc.h  cvl_io.h  imgproc.h  io.h
netpbm/: main.c  netpbm.c  netpbm.h
project1/: README.md
project1/netpbm/: main.c
src/: core.c  cvl.c  cvl_core.c  cvl_draw.c  cvl_error.c  cvl_hough.c  cvl_imgproc.c  cvl_io.c  imgproc.c  io.c
tests/: CMakeLists.txt  test_correlate.c  test_cvl.c  test_image.cpp  test_imgproc.cpp  test_imread.c  test_imwrite.c  test_io.cpp  test_mat.cpp
